# dc-ups-firmware

./: CMakeLists.txt  LICENSE  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  api.c  api.h  battery_gauge.c  battery_gauge.h  battery_protection.c  battery_protection.h  bq24715_charger.c  bq24715_charger.h  bq40z50_gauge.c  bq40z50_gauge.h  buttons.c  buttons.h  callcache.c  callcache.h  config.c  config.h  delay.c  delay.h  display.c  display.h  display_bms.c  display_bms.h  display_network.c  display_network.h  display_on_battery.c  display_on_battery.h  display_power.c  display_power.h  display_screensaver.c  display_screensaver.h  display_system.c  display_system.h  ethernet.c  ethernet.h  event_bus.c  event_bus.h  fb.h  font_3x5.c  font_3x5.h  (+67 more)
webroot/: binding.js  bootstrap.bundle.min.js  bootstrap.min.css  dcin.thtml  dcout.thtml  dcout_settings.thtml  index.js  index.thtml  jquery-1.8.3.min.js  navbar.thtml  resources.inc  status_panel.thtml
